# physsynth

./: .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  conftest.py  pyproject.toml
physsynth/: __init__.py
scripts/: diagnose_body_bridge.py  diagnose_bore.py  diagnose_bore_bell.py  diagnose_bow.py  diagnose_collision.py  diagnose_damped_string.py  diagnose_free_plate.py  diagnose_geometric_string.py  diagnose_ideal_string.py  diagnose_jawari.py  diagnose_mallet.py  diagnose_membrane.py  diagnose_plate.py  diagnose_radiation.py  diagnose_radiation_load.py  diagnose_reed.py  diagnose_stiff_string.py  diagnose_string_free_plate.py  diagnose_string_plate.py  diagnose_sympathetic.py  diagnose_tension_string.py  diagnose_vk_free_plate.py  diagnose_vk_plate.py  verify_web_headless.py
tests/: helpers.py  test_beam_energy.py  test_beam_modal.py  test_beam_stability.py  test_body.py  test_bore_energy.py  test_bore_modal.py  test_bore_radiation.py  test_bore_stability.py  test_bow_energy.py  test_bow_modal.py  test_bow_stability.py  test_collision_energy.py  test_collision_modal.py  test_collision_signature.py  test_connection.py  test_convergence.py  test_damped_string.py  test_dispersion.py  test_energy.py  test_free_plate_connection.py  test_free_plate_energy.py  test_free_plate_modal.py  test_geometric_energy.py  test_geometric_limits.py  test_geometric_phantom.py  test_geometric_polarization.py  test_geometric_rotating_wave.py  test_geometric_whirl.py  test_jawari.py  test_mallet_energy.py  test_mallet_signature.py  test_mallet_wall.py  test_modal.py  (+24 more)
(+66 files in other folders)
