[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physsynth"
version = "0.1.0"
description = "Energy-based physical-modeling sound synthesis (accuracy-first FDTD core)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Boyko Neov" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
# Visualization/diagnostics. Kept OUT of `dependencies` so the headless DSP core
# (physsynth/core) never even has plotting available to import. See CLAUDE.md #4.
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7.4", "matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["physsynth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E,F = pyflakes/pycodestyle; I = isort; NPY = numpy-specific; UP = pyupgrade.
select = ["E", "F", "I", "NPY", "UP", "B"]
ignore = ["E741"]  # ambiguous var name `l` — it is the standard grid index here.
